--- a/source/layout.erb
+++ b/source/layout.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag "application.css" %>
     <%= javascript_include_tag "application.js" %>
     <%= yield_content :head %>
+    <title>DR Player</title>
   </head>
   <body class="<%= page_classes %>">
     <%= yield %>
