--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -1,51 +1,3 @@
-@import "compass";
-@import "compass/reset";
+@encoding utf-8;
 
-html, body {
-  height: 100%;
-  overflow: hidden;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Helvetica Neue", "Helvetica", sans-serif;
-  font-size: 12px;
-}
-
-#controls {
-  @include box-sizing(border-box);
-  text-align: center;
-  background-color: #1A1A1A;
-  border: 1px solid #353535;
-  a {
-    font-weight: bold;
-    display: inline-block;
-    margin: 0;
-    padding: 2px 10px;
-    color: #fff;
-    border-left: 1px solid #353535;
-    height: 28px;
-    &.active,
-    &:hover {
-      background-color: #444;
-    }
-    &:last-child {
-      border-right: 1px solid #353535;
-    }
-  }
-  img {
-    vertical-align: middle;
-  }
-}
-
-#player {
-  background-color: #222;
-}
-
-#controls {
-  z-index: 1000;
-}
-#player {
-  z-index: 900;
-}
+@import 'foundation';
