--- a/source/player.html.erb
+++ b/source/player.html.erb
@@ -20,5 +20,6 @@ layout: false
       </p>
     </div>
     <iframe id="player" class="dr1" scrolling="no" style="width:100%;height:100%;" src="http://dr.dk/TV/popup/live/dr1" frameborder="0"></iframe>
+    <%= partial 'ga' %>
   </body>
 </html>
