--- a/source/stylesheets/player.css.scss
+++ b/source/stylesheets/player.css.scss
@@ -1,6 +1,10 @@
 @import "compass";
 @import "compass/reset";
 
+* {
+  @include box-sizing(border-box);
+}
+
 html, body {
   height: 100%;
   overflow: hidden;
@@ -14,10 +18,10 @@ body {
 }
 
 .blinds {
-  height: 34px;
+  height: 40px;
   width: 100%;
   position: fixed;
-  top: -34px;
+  top: -40px;
   left: 0;
   background: #000;
   -webkit-transition: all .1s linear;
@@ -37,7 +41,7 @@ body {
   a {
     display: block;
     margin: 4px;
-    padding: 5px 10px;
+    padding: 8px 10px;
     background: #000;
     border: 1px solid #333;
     @include border-radius(2px);
@@ -45,7 +49,6 @@ body {
 }
 
 #controls {
-  @include box-sizing(border-box);
   text-align: center;
   background-color: #1A1A1A;
   border: 1px solid #353535;
@@ -53,10 +56,10 @@ body {
     font-weight: bold;
     display: inline-block;
     margin: 0;
-    padding: 2px 10px;
+    padding: 0 10px;
     color: #fff;
     border-left: 1px solid #353535;
-    height: 28px;
+    height: 40px;
     &.active,
     &:hover {
       background-color: #444;
