--- a/source/player.html.erb
+++ b/source/player.html.erb
@@ -21,10 +21,10 @@ layout: false
     </div>
     <div id="controls">
       <p id="channels">
-      <a class="dr1 active" href="http://dr.dk/TV/popup/live/dr1"><%= image_tag("dr1.png") %></a><a class="dr2" href="http://dr.dk/TV/popup/live/dr2"><%= image_tag("dr2.png") %></a><a class="dr3" href="http://dr.dk/TV/popup/live/dr3"><%= image_tag("dr3.png") %></a><a class="dr-ramasjang" href="http://dr.dk/TV/popup/live/dr-ramasjang"><%= image_tag("dr-ramasjang.png") %></a><a class="dr-k" href="http://dr.dk/TV/popup/live/dr-k"><%= image_tag("dr-k.png") %></a><a class="dr-ultra" href="http://dr.dk/TV/popup/live/dr-ultra"><%= image_tag("dr-ultra.png") %></a>
+      <a class="dr1 active" href="http://www.dr.dk/tv/live/popup/dr1"><%= image_tag("dr1.png") %></a><a class="dr2" href="http://dr.dk/tv/live/popup/dr2"><%= image_tag("dr2.png") %></a><a class="dr3" href="http://dr.dk/tv/live/popup/dr3"><%= image_tag("dr3.png") %></a><a class="dr-ramasjang" href="http://dr.dk/tv/live/popup/dr-ramasjang"><%= image_tag("dr-ramasjang.png") %></a><a class="dr-k" href="http:/dr.dk//tv/live/popup/dr-k"><%= image_tag("dr-k.png") %></a><a class="dr-ultra" href="http://dr.dk/tv/live/popup/dr-ultra"><%= image_tag("dr-ultra.png") %></a>
       </p>
     </div>
-    <iframe id="player" class="dr1" scrolling="no" style="width:100%;height:100%;" src="http://dr.dk/TV/popup/live/dr1" frameborder="0"></iframe>
+    <iframe id="player" class="dr1" scrolling="no" style="width:100%;height:100%;" src="http://dr.dk/tv/live/popup/dr1" frameborder="0"></iframe>
     <%= partial 'ga' %>
   </body>
 </html>
