--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
 
 #splash {
   background: url("/images/mountain-lion-galaxy-wallpaper.jpg") no-repeat center center;
+  background-size: cover;
   margin: 1em 0;
   padding: 1em 0 0;
 }
