--- a/source/stylesheets/player.css.scss
+++ b/source/stylesheets/player.css.scss
@@ -60,6 +60,7 @@ body {
     color: #fff;
     border-left: 1px solid #353535;
     height: 40px;
+    line-height: 1;
     &.active,
     &:hover {
       background-color: #444;
